--- a/crates/rwkv/Cargo.toml
+++ b/crates/rwkv/Cargo.toml
@@ -41,6 +41,9 @@ rocm = ["burn/rocm"]
 cpu = ["burn/cpu"]
 
 infer = ["dep:rwkv-infer", "rwkv-infer/http", "data"]
+infer-ipc = ["infer", "rwkv-infer/ipc-iceoryx2"]
+trace-lite = ["rwkv-infer?/trace-lite", "rwkv-train?/trace-lite"]
+trace-full = ["rwkv-infer?/trace-full", "rwkv-train?/trace-full"]
 
 [dependencies]
 burn = { workspace = true, default-features = false, features = [] }
