feat(rwkv-bench): Add tracing and stage metrics; improve reports
Add tracing support and detailed per-stage timing/metrics across the bench tooling, plus report & serving improvements.

Highlights:
- Add tracing/tracy/nvtx deps to Cargo.toml and Cargo.lock and expose a `trace` feature in rwkv-bench with a tracy_scope! macro.
- Extend metrics: introduce StageBreakdownMs, StageSummaryMs, error buckets and error classification; refactor percentile calculation to be unit-consistent.
- Reporting: include stage breakdown and error counts in serve report markdown; replace sweep heatmap with request-count vs metric line charts and simplify sweep summary.
- Serving: parse SSE/JSON timing fields into stage metrics, better reqwest error formatting, detection of missing terminal events, additional generation parameters with defaults (top_k/top_p/penalties), use FuturesUnordered for concurrency, and add a live progress UI (indicatif) and LiveStats tracking.

These changes improve observability (per-stage timings and tracing), make streaming error handling more robust, and provide clearer benchmark reports and live feedback during runs.

--- a/crates/rwkv-bench/Cargo.toml
+++ b/crates/rwkv-bench/Cargo.toml
@@ -10,8 +10,12 @@ bench = false
 
 [features]
 default = []
-trace-lite = ["dep:rwkv-trace", "rwkv-trace/tracy"]
-trace-full = ["trace-lite"]
+trace = [
+    "dep:tracy-client",
+    "dep:tracing",
+    "dep:tracing-subscriber",
+    "dep:tracing-tracy",
+]
 bench-serve = []
 bench-report = []
 
@@ -21,9 +25,12 @@ futures = { workspace = true }
 serde = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
+indicatif = { workspace = true }
+tracy-client = { workspace = true, optional = true }
+tracing = { workspace = true, optional = true }
+tracing-subscriber = { workspace = true, optional = true }
+tracing-tracy = { workspace = true, optional = true }
 
-plotters = { version = "0.3.7", default-features = false, features = ["line_series", "point_series", "svg_backend"] }
-reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
-serde_json = "1.0.145"
-
-rwkv-trace = { path = "../rwkv-trace", optional = true }
+plotters = { workspace = true, default-features = false, features = ["line_series", "point_series", "svg_backend"] }
+reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls", "stream"] }
+serde_json = { workspace = true }
