--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,11 +75,20 @@ syn = { version = "2.0.114", features = ["full"] }
 # === CLI & Monitoring ===
 clap = { version = "4.5.55", features = ["derive"] }
 log = "0.4.29"
+tracing = { version = "0.1.41" }
+tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
+tracing-tracy = { version = "0.11.4" }
 chrono = { version = "0.4.43", features = ["clock"] }
 clia-tracing-config = "0.2.7"
 indicatif = { version = "0.18.3", features = ["tokio"] }
 thiserror = "2.0.17"
+nvtx = "1.3.0"
 wandb = { git = "https://github.com/rwkv-rs/wandb-rs", rev = "1633ca27afb4e09caca2e00d148ea239bc639a69" }
+plotters = { version = "0.3.7", default-features = false }
+reqwest = { version = "0.12.24", default-features = false }
+serde_json = "1.0.145"
+tracy-client = "0.18.4"
+iceoryx2 = { version = "0.8.1", features = ["libc_platform"] }
 
 # === Deep Learning Core ===
 burn = { version = "0.20.1", default-features = false }
