--- a/crates/rwkv-data/Cargo.toml
+++ b/crates/rwkv-data/Cargo.toml
@@ -47,4 +47,4 @@ rwkv-derive = { path = "../rwkv-derive" }
 rwkv-config = { path = "../rwkv-config" }
 
 [dev-dependencies]
-tempfile = "3.0"
+tempfile = { workspace = true }
