--- a/crates/rwkv-trace/Cargo.toml
+++ b/crates/rwkv-trace/Cargo.toml
@@ -2,12 +2,5 @@
 name = "rwkv-trace"
 version = "0.1.0"
 edition = "2024"
-description = "Forthcoming tracing and telemetry utilities for RWKV model execution and training"
+description = "Forthcoming interpretability utilities for RWKV model analysis"
 license = "Apache-2.0"
-
-[features]
-default = []
-tracy = ["dep:tracy-client"]
-
-[dependencies]
-tracy-client = { version = "0.18.4", optional = true }
