--- a/crates/rwkv-train/Cargo.toml
+++ b/crates/rwkv-train/Cargo.toml
@@ -38,8 +38,12 @@ metal = ["wgpu", "burn/metal"]
 cuda = ["cubecl", "burn/cuda"]
 rocm = ["cubecl", "burn/rocm"]
 cpu = ["burn/cpu"]
-trace-lite = ["dep:rwkv-trace", "rwkv-trace/tracy"]
-trace-full = ["trace-lite"]
+trace = [
+    "dep:tracing",
+    "dep:rwkv-bench",
+    "rwkv-bench/trace",
+]
+nsys = ["trace", "dep:nvtx"]
 
 [dependencies]
 # === Deep Learning Core ===
@@ -57,8 +61,9 @@ toml = { workspace = true }
 # === CLI ===
 clap = { workspace = true }
 log = { workspace = true }
+tracing = { workspace = true, optional = true }
 chrono = { workspace = true }
-clia-tracing-config = "*"
+clia-tracing-config = { workspace = true }
 
 # === Async Runtime ===
 tokio = { workspace = true }
@@ -82,10 +87,10 @@ derive-new = { workspace = true }
 # === Monitoring ===
 wandb = { workspace = true }
 indicatif = { workspace = true }
+nvtx = { workspace = true, optional = true }
 
 # === Local Dependencies ===
 rwkv-nn = { path = "../rwkv-nn", default-features = false, optional = true }
 rwkv-data = { path = "../rwkv-data", optional = true }
 rwkv-config = { path = "../rwkv-config", optional = true }
 rwkv-bench = { path = "../rwkv-bench", optional = true }
-rwkv-trace = { path = "../rwkv-trace", optional = true }
