pref(rwkv-infer): Refactor tracing, engine forward & rapid-sample
Major refactor across the inference, nn, and bench crates:

- Tracing: move lightweight tracing macros into rwkv-bench (trace_scope / trace_lite_scope) and switch call sites to rwkv_bench::trace_...; expose tracing dependency via rwkv-bench feature changes in Cargo.toml.

- Engine/runtime: rename and rework the executor trait from InferExecutor to ModelForward, unify prefill/decode into a single forward(...) method that accepts per-batch token and sampling tensors and a need_sample flag; rename reset_batch_position -> reset and adapt runtime scheduling/decoding logic and logging/streaming behavior accordingly.

- Rapid-sample API and kernels: convert scalar sampling params (temperature/top_k/top_p) into per-batch tensors (inv_temperatures, top_ks, top_ps), expand penalty handling to accept separate presence/repetition/decay tensors, add Cube launch types for sampling/penalty params, update fusion and host/kernel implementations, and export normalize_topk_topp from host for callers to pre-normalize.

- Tests/benches: update benches to construct per-batch sampling tensors and remove old penalty config helpers.

- Misc: replace many runtime asserts with debug_assert* for shape/positional checks in kernels and wkv7 host; tidy up imports and remove now-unused types.

These changes enable per-batch sampling parameters and centralized tracing helpers, preparing the codebase for batched GPU sampling and unified model forward semantics.

--- a/crates/rwkv-infer/Cargo.toml
+++ b/crates/rwkv-infer/Cargo.toml
@@ -28,7 +28,7 @@ nvtx = { workspace = true, optional = true }
 # Optional tokenizer for text endpoints (RWKV vocab)
 rwkv-data = { path = "../rwkv-data" }
 rwkv-config = { path = "../rwkv-config" }
-rwkv-bench = { path = "../rwkv-bench", default-features = false, optional = true }
+rwkv-bench = { path = "../rwkv-bench", default-features = false }
 clia-tracing-config = { workspace = true }
 iceoryx2 = { workspace = true, optional = true }
 
@@ -36,7 +36,7 @@ iceoryx2 = { workspace = true, optional = true }
 default = ["http"]
 http = []
 ipc-iceoryx2 = ["dep:iceoryx2"]
-trace = ["dep:tracing", "dep:rwkv-bench", "rwkv-bench/trace"]
+trace = ["dep:tracing", "rwkv-bench/trace"]
 nsys = ["trace", "dep:nvtx"]
 
 [dev-dependencies]
