feat(rwkv-nn): Add optional tracing & bench scopes to inference
Enable optional tracing in rwkv-nn and propagate a `trace` feature to the rwkv workspace. Add an optional `tracing` dependency and instrument hot inference paths with #[cfg_attr(feature = "trace", tracing::instrument(...))] across kernels, cells, and modules (wkv7, rapid_sample, channel_mixer, time_mixer, gated_readout, weight_prepare, model infer, etc.). Insert rwkv_bench::trace_lite_scope/trace_scope calls in performance-critical spots (gather/scatter, embed, layer_norm, sampling, forward step) to improve profiling without runtime overhead when the feature is disabled. Refactor the rwkv-lm example: move the engine factory and model-group building logic into examples/src/inferring.rs, simplify the example entry file and imports, and wire the RuntimeManager engine factory usage. These changes improve observability and make tracing/profiling opt-in.

--- a/crates/rwkv-nn/Cargo.toml
+++ b/crates/rwkv-nn/Cargo.toml
@@ -10,6 +10,7 @@ bench = false
 
 [features]
 default = ["fusion", "wgpu"]
+trace = ["dep:tracing"]
 fusion = []
 wgpu = ["burn/wgpu"]
 webgpu = ["wgpu", "burn/webgpu"]
@@ -28,6 +29,7 @@ ndarray = { workspace = true }
 ndarray-npy = { workspace = true }
 
 serde = { workspace = true }
+tracing = { workspace = true, optional = true }
 
 itertools = { workspace = true }
 
